# LNN

./: pyproject.toml  setup.py
lnn/: __init__.py  _utils.py  constants.py  model.py
lnn/neural/activations/: node.py
lnn/neural/methods/: lukasiewicztransparent.py
lnn/neural/parameters/: node.py
lnn/symbolic/: _gm.py
lnn/symbolic/logic/: __init__.py  connective_neuron.py  formula.py  unary_operator.py
tests/learning/fol/: test_bool_and_1.py  test_bool_and_supervised_1.py  test_supervised_family_tree.py
tests/learning/propositional/: test_supervised_1.py
tests/reasoning/gm/: test_bool_and_5.py  test_gm_njoin_2.py
tests/reasoning/logic/: test_get_data.py
tests/reasoning/logic/fol/: test_quantifier_free_var.py
tests/reasoning/logic/propositional/: test_bool_and_1.py  test_bool_implies_1.py  test_bool_or_1.py  test_bool_or_n.py  test_not_1.py  test_tri_and_1.py  test_tri_implies_1.py  test_tri_not_1.py  test_tri_or_1.py
