[project]
name = "lnn"
version = "0.1.0"
description = "Logic Neural Networks Library Fork"
authors = [
    {name = "toranzocalderonjs", email = "toranzocalderonjs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy (>=1.23.4)",
    "torch (==2.7.1)",
    "matplotlib (>=3.3.3)",
    "networkx (>=2.5.1)",
    "pandas (>=1.3.4)",
    "tabulate (>=0.9.0,<0.10.0)",
    "tqdm (>=4.67.2,<5.0.0)",
    "scipy (<1.11)",
    "scikit-learn (<1.8)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

